[profile.release]
split-debuginfo = "unpacked"
lto = "thin"

# Enable basic optimizations for unittests
[profile.test]
opt-level = 1

# Enable optimizations for procmacros for faster recompile
[profile.dev.build-override]
opt-level = 1

[workspace]
members = [
    "logger",
    "frozen-abi-macro",
    "frozen-abi",
    "atomic-u64",
    "decode-error",
    "define-syscall",
    "sanitize",
    "hash",
    "keccak-hasher",
    "sha256-hasher",
    "pubkey",
    "instruction",
    "serialize-utils",
    "msg",
    "program-error",
    "program-memory",
    "account-info",
    "sdk-macro",
    "sdk-ids",
    "sysvar-id",
    "clock",
    "epoch-schedule",
    "fee-calculator",
    "last-restart-slot",
    "program-entrypoint",
    "rent",
    "slot-hashes",
    "slot-history",
    "bincode",
    "stable-layout",
    "cpi",
    "native-token",
    "program-option",
    "program-pack",
    "secp256k1-recover",
    "short-vec",
    "serde-varint",
    "transaction-error",
    "big-mod-exp",
    "blake3-hasher",
    "borsh",
    "epoch-rewards",
    "nonce",
    "instructions-sysvar",
    "system-interface",
    "stake-interface",
    "sysvar",
    "account",
    "feature-gate-interface",
    "feature-gate-client",
    "address-lookup-table-interface",
    "compute-budget-interface",
    "loader-v2-interface",
    "loader-v3-interface",
    "loader-v4-interface",
    "vote-interface",
    "message",
    "example-mocks",
    "program",
    "derivation-path",
    "signature",
    "bn254",
    "feature-set",
    "packet",
    "precompile-error",
    "inflation",
    "epoch-info",
    "epoch-rewards-hasher",
    "fee-structure",
    "hard-forks",
    "seed-derivable",
    "seed-phrase",
    "signer",
    "keypair",
    "nonce-account",
    "offchain-message",
    "poh-config",
    "presigner",
    "reward-info",
    "reserved-account-keys",
    "commitment-config",
    "cluster-type",
    "serde",
    "time-utils",
    "shred-version",
    "genesis-config",
    "rent-collector",
    "rent-debits",
    "ocp/ed25519-program",
    "ocp/secp256k1-program",
    "ocp/secp256r1-program",
    "precompiles",
    "transaction",
    "client-traits",
    "system-transaction",
    "fee-structure",
    "quic-definitions",
    "validator-exit",
    "transaction-context",
    "sdk",
    "file-download",
    "package-metadata-macro",
    "package-metadata",
]

resolver = "2"

[workspace.package]
version = "2.2.1"
authors = ["Bovey Maintainers <maintainers@solana.xyz>"]
repository = "https://github.com/nabob-labs/solana-spe"
homepage = "https://solana.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false

[workspace.dependencies]
solana-logger = { path = "logger" }
solana-frozen-abi-macro = { path = "frozen-abi-macro" }
solana-frozen-abi = { path = "frozen-abi" }
solana-atomic-u64 = { path = "atomic-u64" }
solana-decode-error = { path = "decode-error" }
solana-define-syscall = { path = "define-syscall" }
solana-sanitize = { path = "sanitize" }
solana-hash = { path = "hash", default-features = false }
solana-keccak-hasher = { path = "keccak-hasher" }
solana-sha256-hasher = { path = "sha256-hasher" }
solana-pubkey = { path = "pubkey", default-features = false }
solana-instruction = { path = "instruction", default-features = false }
solana-serialize-utils = { path = "serialize-utils" }
solana-msg = { path = "msg" }
solana-program-error = { path = "program-error" }
solana-program-memory = { path = "program-memory" }
solana-account-info = { path = "account-info" }
solana-sdk-macro = { path = "sdk-macro" }
solana-sdk-ids = { path = "sdk-ids" }
solana-sysvar-id = { path = "sysvar-id" }
solana-clock = { path = "clock" }
solana-epoch-schedule = { path = "epoch-schedule" }
solana-fee-calculator = { path = "fee-calculator" }
solana-last-restart-slot = { path = "last-restart-slot" }
solana-program-entrypoint = { path = "program-entrypoint" }
solana-rent = { path = "rent", default-features = false }
solana-slot-hashes = { path = "slot-hashes" }
solana-slot-history = { path = "slot-history" }
solana-bincode = { path = "bincode" }
solana-stable-layout = { path = "stable-layout" }
solana-cpi = { path = "cpi" }
solana-native-token = { path = "native-token" }
solana-program-option = { path = "program-option" }
solana-program-pack = { path = "program-pack" }
solana-secp256k1-recover = { path = "secp256k1-recover" }
solana-short-vec = { path = "short-vec" }
solana-serde-varint = { path = "serde-varint" }
solana-transaction-error = { path = "transaction-error" }
solana-big-mod-exp = { path = "big-mod-exp" }
solana-blake3-hasher = { path = "blake3-hasher" }
solana-borsh = { path = "borsh" }
solana-epoch-rewards = { path = "epoch-rewards" }
solana-nonce = { path = "nonce" }
solana-instructions-sysvar = { path = "instructions-sysvar" }
solana-system-interface = { path = "system-interface" }
solana-stake-interface = { path = "stake-interface" }
solana-sysvar = { path = "sysvar" }
solana-account = { path = "account" }
solana-feature-gate-interface = { path = "feature-gate-interface" }
solana-feature-gate-client = { path = "feature-gate-client" }
solana-address-lookup-table-interface = { path = "address-lookup-table-interface" }
solana-compute-budget-interface = { path = "compute-budget-interface" }
solana-loader-v2-interface = { path = "loader-v2-interface" }
solana-loader-v3-interface = { path = "loader-v3-interface" }
solana-loader-v4-interface = { path = "loader-v4-interface" }
solana-vote-interface = { path = "vote-interface" }
solana-message = { path = "message" }
solana-example-mocks = { path = "example-mocks" }
solana-program = { path = "program", default-features = false }
solana-derivation-path = { path = "derivation-path" }
solana-signature = { path = "signature", default-features = false }
solana-bn254 = { path = "bn254" }
solana-feature-set = { path = "feature-set" }
solana-packet = { path = "packet" }
solana-precompile-error = { path = "precompile-error" }
solana-inflation = { path = "inflation" }
solana-epoch-info = { path = "epoch-info" }
solana-epoch-rewards-hasher = { path = "epoch-rewards-hasher" }
solana-fee-structure = { path = "fee-structure" }
solana-hard-forks = { path = "hard-forks", default-features = false }
solana-seed-derivable = { path = "seed-derivable" }
solana-seed-phrase = { path = "seed-phrase" }
solana-signer = { path = "signer" }
solana-keypair = { path = "keypair" }
solana-nonce-account = { path = "nonce-account" }
solana-offchain-message = { path = "offchain-message" }
solana-poh-config = { path = "poh-config" }
solana-presigner = { path = "presigner" }
solana-reward-info = { path = "reward-info" }
solana-reserved-account-keys = { path = "reserved-account-keys", default-features = false }
solana-commitment-config = { path = "commitment-config" }
solana-cluster-type = { path = "cluster-type" }
solana-serde = { path = "serde" }
solana-time-utils = { path = "time-utils" }
solana-shred-version = { path = "shred-version" }
solana-genesis-config = { path = "genesis-config" }
solana-rent-collector = { path = "rent-collector" }
solana-rent-debits = { path = "rent-debits" }
solana-ed25519-program = { path = "ocp/ed25519-program" }
solana-secp256k1-program = { path = "ocp/secp256k1-program" }
solana-secp256r1-program = { path = "ocp/secp256r1-program", default-features = false }
solana-precompiles = { path = "precompiles" }
solana-transaction = { path = "transaction" }
solana-client-traits = { path = "client-traits" }
solana-system-transaction = { path = "system-transaction" }
solana-quic-definitions = { path = "quic-definitions" }
solana-validator-exit = { path = "validator-exit" }
solana-transaction-context = { path = "transaction-context" }
solana-sdk = { path = "sdk" }
solana-file-download = { path = "file-download" }
solana-package-metadata-macro = { path = "package-metadata-macro" }
solana-package-metadata = { path = "package-metadata" }

ahash = "0.8.11"
anyhow = "1.0.96"
arbitrary = "1.4.1"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
array-bytes = "=1.4.1"
assert_matches = "1.5.0"
base64 = "0.22.1"
bincode = "1.3.3"
bitflags = { version = "2.8.0" }
blake3 = "1.5.5"
borsh = { version = "1.5.5", features = ["derive", "unstable__schema"] }
borsh0-10 = { package = "borsh", version = "0.10.3" }
bs58 = { version = "0.5.1", default-features = false }
bv = "0.11.1"
bytemuck = "1.21.0"
bytemuck_derive = "1.8.1"
cfg_eval = "0.1.2"
chrono = { version = "0.4.39", default-features = false }
console = "0.15.10"
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
criterion = "0.5.1"
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
derivation-path = { version = "0.2.0", default-features = false }
digest = "0.10.7"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "0.2.0"
env_logger = "0.9.3"
five8_const = "0.1.3"
getrandom = "0.2.10"
hex = "0.4.3"
hmac = "0.12.1"
im = "15.1.0"
indicatif = "0.17.9"
itertools = "0.12.1"
js-sys = "0.3.77"
lazy_static = "1.5.0"
libc = "0.2.170"
libsecp256k1 = { version = "0.6.0", default-features = false, features = [
    "std",
    "static-context",
] }
log = "0.4.25"
memmap2 = "0.5.10"
memoffset = "0.9"
num-bigint = "0.4.6"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.3"
openssl = "0.10"
parking_lot = "0.12"
pbkdf2 = { version = "0.11.0", default-features = false }
proc-macro2 = "1.0.93"
proptest = "1.6"
qstring = "0.7.2"
qualifier_attr = { version = "0.2.2", default-features = false }
quote = "1.0"
rand = "0.8.5"
rand0-7 = { package = "rand", version = "0.7" }
reqwest = { version = "0.11.27", default-features = false }
serde = "1.0.217" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde-big-array = "0.5.1"
serde_bytes = "0.11.15"
serde_derive = "1.0.217" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.139"
serde_with = { version = "3.12.0", default-features = false }
serial_test = "2.0.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
signal-hook = "0.3.17"
siphasher = "0.3.11"
static_assertions = "1.1.0"
strum = "0.24"
strum_macros = "0.24"
syn = "2.0"
test-case = "3.3.1"
thiserror = "2.0.11"
tiny-bip39 = "0.8.2"
toml = "0.8.20"
uriparse = "0.6.4"
wasm-bindgen = "0.2"

[patch.crates-io]
# We include the following crates as our dependencies above from crates.io:
#
#  * solana-system-interface
#
# They, in turn, depend on a number of crates that we also include directly
# using `path` specifications.  For example, `solana-system-interface` depends
# on `solana-instruction`.  And we explicitly specify `solana-instruction` above
# as a local path dependency:
#
#     solana-instruction = { path = "instruction", version = "2.2.1" }
#
# Unfortunately, Cargo will try to resolve the `solana-system-interface`
# `solana-instruction` dependency only using what is available on crates.io.
# Crates.io normally contains a previous version of these crates, and we end up
# with two versions of `solana-instruction` and all of their dependencies in our
# build tree.
#
# If you are developing downstream using non-crates-io solana-program (local or
# forked repo, or from github rev, eg), duplicate the following patch statements
# in your Cargo.toml. If you still hit duplicate-type errors with the patch
# statements in place, run `cargo update -p solana-program` to remove extraneous
# versions from your Cargo.lock file.
solana-clock = { path = "clock" }
solana-cpi = { path = "cpi" }
solana-decode-error = { path = "decode-error" }
solana-frozen-abi = { path = "frozen-abi" }
solana-frozen-abi-macro = { path = "frozen-abi-macro" }
solana-instruction = { path = "instruction" }
solana-program-error = { path = "program-error" }
solana-pubkey = { path = "pubkey" }
solana-sysvar-id = { path = "sysvar-id" }
