[package]
name = "solana_rbpf"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "solana_rbpf"
path = "src/lib.rs"

[dependencies.arbitrary]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.byteorder]
version = "1.2"

[dependencies.combine]
version = "3.8.1"

[dependencies.gdbstub]
version = "0.6.2"
optional = true

[dependencies.goblin]
version = "0.5.1"

[dependencies.hash32]
version = "0.2.0"

[dependencies.log]
version = "0.4.2"

[dependencies.rand]
version = "0.8.5"
features = ["small_rng"]

[dependencies.rustc-demangle]
version = "0.1"

[dependencies.scroll]
version = "0.11"

[dependencies.thiserror]
version = "1.0.26"

[dev-dependencies.elf]
version = "0.0.10"

[dev-dependencies.json]
version = "0.12"

[features]
debugger = ["gdbstub"]
default = ["jit"]
fuzzer-not-safe-for-production = ["arbitrary"]
jit = [
    "libc",
    "winapi",
]

[target."cfg(not(windows))".dependencies.libc]
version = "0.2"
optional = true

[target."cfg(windows)".dependencies.winapi]
version = "0.3"
features = [
    "memoryapi",
    "sysinfoapi",
    "winnt",
    "errhandlingapi",
]
optional = true
