[package]
name = "solana-fee"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solana-feature-set = { workspace = true }
solana-fee-structure = { workspace = true }
solana-svm-transaction = { workspace = true }
