[package]
name = "solana-runtime-transaction"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solana-transaction-view = { workspace = true }
log = { workspace = true }
solana-builtins-default-costs = { workspace = true }
solana-compute-budget = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk = { workspace = true }
solana-svm-transaction = { workspace = true }
thiserror = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_runtime_transaction"

[dev-dependencies]
bincode = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
solana-builtins-default-costs = { workspace = true, features = ["dev-context-only-utils"] }
solana-program = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = ["solana-builtins-default-costs/dev-context-only-utils"]

[lints]
workspace = true
