[package]
name = "solana-sbpf"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "solana_sbpf"
path = "src/lib.rs"

[dependencies]
arbitrary = { version = "1.0", optional = true, features = ["derive"] }
byteorder = "1.2"
combine = "3.8.1"
gdbstub = { version = "0.6.2", optional = true }
hash32 = "0.2.0"
log = "0.4.2"
rand = { version = "0.8.5", features = ["small_rng"]}
rustc-demangle = "0.1"
shuttle = { version = "0.7.1", optional = true }
thiserror = "2.0.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "sysinfoapi", "winnt", "errhandlingapi"], optional = true }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2", optional = true }

[features]
default = ["jit"]
jit = ["libc", "winapi"]
jit-enable-host-stack-frames = ["jit"]
fuzzer-not-safe-for-production = ["arbitrary"]
debugger = ["gdbstub"]
shuttle-test = ["dep:shuttle"]

[dev-dependencies]
elf = "0.0.10"
json = "0.12"
test_utils = { path = "test_utils/" }
