[package]
name = "solana-security-txt"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true, optional = true }
twoway = { version = "=0.2.2", optional = true }

[features]
parser = [
    "thiserror",
    "twoway",
]
