[package]
name = "solana-security-txt"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies.thiserror]
version = "=1.0.30"
optional = true

[dependencies.twoway]
version = "=0.2.2"
optional = true

[features]
parser = [
    "thiserror",
    "twoway",
]
