[package]
name = "solana-transaction-view"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solana-sdk = { workspace = true }
solana-svm-transaction = { workspace = true }

[dev-dependencies]
# See order-crates-for-publishing.py for using this unusual `path = "."`
solana-transaction-view = { path = ".", features = ["dev-context-only-utils"] }
bincode = { workspace = true }
criterion = { workspace = true }

[features]
dev-context-only-utils = []
