[package]
name = "solana-type-overrides"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
futures = { workspace = true, optional = true }
lazy_static = { workspace = true }
rand = { workspace = true }
shuttle = { workspace = true, optional = true }

[features]
shuttle-test = ["dep:shuttle"]
executor = ["dep:futures"]
