[package]
name = "solana-grpc-client"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bytes = "1.3.0"
futures = "0.3.24"
thiserror ="1.0.63"
tonic = { version = "0.12.1", features = ["tls", "tls-roots"] }
tonic-health = {version = "0.12.1" }
solana-grpc-proto = { workspace = true, features = ["tonic", "tonic-compression"] }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"
